fixed settings for mobile, dark mode fixes

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -56,6 +56,7 @@ h1 {
     .colorAuto {
         --bg-base: rgb(33, 33, 36);
         --bg-sec: #282828;
+        --bg-selected: #616161;
         --bg-field: #353535;
         --text-field: rgb(221, 221, 221);
         --text: white;
@@ -65,6 +66,7 @@ h1 {
         --placeholder: var(--light-gray);
         --border: var(--dark-gray);
         --error-red: var(--dark-red);
+        --shadow: #5d5b5b35;
         
         background-color: var(--bg-base);
         color: var(--text);
@@ -75,6 +77,7 @@ h1 {
     .colorAuto {
         --bg-base: #f7f8fa;
         --bg-sec: rgb(255, 255, 255);
+        --bg-selected: #d4dffd;
         --bg-field: rgb(255, 255, 255);
         --text-field: rgb(77, 77, 77);
         --text: black;
@@ -83,6 +86,7 @@ h1 {
         --button-bg-hover: #ececec;
         --placeholder: #808080;
         --border: #eeeeee;
+        --shadow: #00000015;
 
         background-color: var(--bg-base);
         color: var(--text);
@@ -92,6 +96,7 @@ h1 {
 .colorDark {
     --bg-base: rgb(33, 33, 36);
     --bg-sec: #282828;
+    --bg-selected: #616161;
     --bg-field: #353535;
     --text-field: rgb(221, 221, 221);
     --text: white;
@@ -101,6 +106,7 @@ h1 {
     --placeholder: var(--light-gray);
     --border: var(--dark-gray);
     --error-red: var(--dark-red);
+    --shadow: #5d5b5b35;
     
     background-color: var(--bg-base);
     color: var(--text);
@@ -109,6 +115,7 @@ h1 {
 .colorLight {
     --bg-base: #f7f8fa;
     --bg-sec: rgb(255, 255, 255);
+    --bg-selected: #d4dffd;
     --bg-field: rgb(255, 255, 255);
     --text-field: rgb(77, 77, 77);
     --text: black;
@@ -117,6 +124,7 @@ h1 {
     --button-bg-hover: #ececec;
     --placeholder: #808080;
     --border: #eeeeee;
+    --shadow: #00000015;
 
     background-color: var(--bg-base);
     color: var(--text);
