--- a/frontend/src/styles/ImageSelector.css
+++ b/frontend/src/styles/ImageSelector.css
@@ -1,17 +1,8 @@
-.image-selector-component{
-    width: 20%;
-}
-.image-selector-div{ 
+.image-selector-div { 
     height: 100%;
     width: 100%;
 }
 
-.image-selector-div img{
-    height:100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.image-selector-uploader{
+.image-selector-uploader {
     width: 100%;
 }
